<resources>
    <string name="app_name">Recepi Apps</string>
    <string name="title">Title:</string>
    <string name="description">Description:</string>
    <string name="itemName">Fried Chicken Legs </string>
    <string name="recipe_name">Recipe Name</string>
    <string name="price">Price:</string>
    <string name="select_image">Select Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="update_image">Update Image</string>
    <string name="update">Update</string>
</resources>
