<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailsActivity">

    <ImageView
        android:id="@+id/imageV"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="20sp"
        android:scaleType="centerCrop"
        android:src="@drawable/image0"/>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="10dp"
       android:weightSum="2"
       android:orientation="horizontal">
      <LinearLayout
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_margin="10dp"
          android:layout_weight="1.3">
          <TextView
              android:id="@+id/txtTitle"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/title"
              android:textStyle="bold"
              android:textSize="22sp"/>
      </LinearLayout>
       <LinearLayout
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight=".7">
           <TextView
               android:id="@+id/txtPrice"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/price"
               android:layout_margin="5dp"
               android:textSize="22sp"
               android:textColor="#6BBF0A"
               android:textStyle="bold"/>
       </LinearLayout>
   </LinearLayout>

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="19sp"
        android:padding="5dp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent">
        <Button
            android:id="@+id/updateBtn"
            android:onClick="updateButton"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/update"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/red"
            android:background="#BBD9E6"/>
        <Button
            android:id="@+id/deleteBtn"
            android:onClick="deleteButton"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/delete"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="20dp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/red"
            android:background="#BBD9E6"/>
    </RelativeLayout>

</LinearLayout>